hphp/hack/test/typecheck/foreach_kv_list2.php.legacy.exp
File "foreach_kv_list2.php", line 17, characters 9-10:
Invalid argument (Typing[4110])
File "foreach_kv_list2.php", line 12, characters 14-19:
This is a string
File "foreach_kv_list2.php", line 15, characters 20-20:
It is incompatible with an int
